--- a/assets/styles/src/theme.less
+++ b/assets/styles/src/theme.less
@@ -17,7 +17,7 @@ p {
 }
 .go-on-projects,
 .column__heading {
-  margin-bottom: 20px;
+  margin: 0 0 20px;
   font-size: 1.5rem;
   line-height: 1.1;
   letter-spacing: 0.2rem;
@@ -274,7 +274,7 @@ p {
     display: block;
   }
 }
-@media screen and (min-width: 600px) and (max-width: @screen-xs) {
+@media screen and (min-width: 621px) and (max-width: @screen-xs) {
   .column {
     &_wrapper {
       width: ~"calc(100% - 215px)";
