fix bug on landscape orientation

--- a/assets/styles/src/theme.less
+++ b/assets/styles/src/theme.less
@@ -326,6 +326,9 @@ p {
     float: left;
     margin-right: 30px;
   }
+  .sidebar.open {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 420px) {
   .column_personalities {
